# mcl-utils

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: container.hpp  fs.cpp  fs.hpp  id.hpp  log.cpp  log.hpp  math.cpp  math.hpp  os.hpp  string.cpp  string.hpp  time.cpp  time.hpp  vector.hpp
tests/: all.cpp
